--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geometry-2d",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "",
   "main": "lib/point.js",
   "scripts": {
@@ -12,8 +12,8 @@
     "build-watch": "babel src --out-dir lib --source-maps --watch",
     "start": "npm run build && node lib/point.js",
     "preinstall-globally": "npm run clean && flow check && npm run test && npm run build && cp src/point.js lib/point.js.flow",
-      "install-globally": "npm install -g .",
-      "prepublish": "npm run clean && flow check && npm run test && npm run build && cp src/point.js lib/point.js.flow"
+    "install-globally": "npm install -g .",
+    "prepublish": "./prepublish.sh"
   },
   "repository": {
     "type": "git",
@@ -31,8 +31,9 @@
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.16.3",
     "babel-runtime": "^6.6.1",
-    "flow-bin": "^0.27.0",
+    "flow-bin": "^0.32.0",
     "mocha": "^2.5.3"
   },
   "dependencies": {
