--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geometry-2d",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "",
   "main": "lib/point.js",
   "scripts": {
@@ -29,18 +29,17 @@
     "babel-core": "^6.7.4",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.16.3",
     "babel-runtime": "^6.6.1",
     "flow-bin": "^0.32.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "source-map-support": "^0.4.5"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "^6.7.4",
-    "lodash": "^4.10.0",
-    "source-map-support": "^0.4.0"
+    "lodash": "^4.10.0"
   },
   "bugs": {
     "url": "https://github.com/mperdikeas/js-geometry-2d/issues"
