--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geometry-2d",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "",
   "main": "lib/point.js",
   "scripts": {
@@ -33,13 +33,13 @@
     "babel-register": "^6.16.3",
     "babel-runtime": "^6.6.1",
     "flow-bin": "^0.32.0",
-    "mocha": "^2.5.3",
-    "source-map-support": "^0.4.5"
+    "mocha": "^2.5.3"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "^6.7.4",
-    "lodash": "^4.10.0"
+    "lodash": "^4.10.0",
+    "source-map-support": "^0.4.5"
   },
   "bugs": {
     "url": "https://github.com/mperdikeas/js-geometry-2d/issues"
