--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "geometry-2d",
-  "version": "0.0.20",
+  "version": "0.1.0",
   "description": "",
-  "main": "lib/point.js",
+  "main": "lib/index.js",
   "scripts": {
     "clean": "rm -fr ./lib/*.js && rm -fr ./lib/*.js.flow && rm -fr ./lib/*.js.map",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
@@ -10,8 +10,8 @@
     "test-watch": "npm run build && mocha --require source-map-support/register --compilers js:babel-register --watch",
     "build": "babel src --out-dir lib --source-maps",
     "build-watch": "babel src --out-dir lib --source-maps --watch",
-    "start": "npm run build && node lib/point.js",
-    "preinstall-globally": "npm run clean && flow check && npm run test && npm run build && cp src/point.js lib/point.js.flow",
+    "start": "npm run build && node lib/index.js",
+    "preinstall-globally": "npm run clean && flow check && npm run test && npm run build && for f in $(find src/ -iname *.js | cut -c5-) ; do cp src/$f lib/$f.flow; done",
     "install-globally": "npm install -g .",
     "prepublish": "./prepublish.sh"
   },
